# RPA-Checkpoint-1

./: Checkpoint 1 - RPA.ipynb  vagas_infojobs.db
sprint_AU/: pyproject.toml  sprint_au.py  vagas_infojobs.xlsx
